# zk-mixuper-on-chain

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  tornadano.cabal  zk-mixuper-on-chain.cabal
app/: Main.hs  Options.hs
compiled/: mixerScript.plutus
src/: Fib.hs  MyLib.hs  Run.hs  SimpleValidator.hs
src/Ext/Plutarch/: ByteString.hs  List.hs  Num.hs  Rational.hs
src/Ext/Plutarch/Api/V2/: Contexts.hs  Value.hs
src/Ext/Plutarch/Extra/: Run.hs
src/Ext/PlutusTx/: Builtins.hs  List.hs  Monad.hs  Numeric.hs
src/Mixer/: Datum.hs  Script.hs
src/Mixer/Datum/: Plutus.hs
src/Mixer/Script/: Deposit.hs  Withdraw.hs
src/Plutarch/: Pairing.hs  ZK.hs
src/Plutarch/Pairing/: BN128.hs  Group.hs  MillerAlgorithm.hs
src/Plutarch/Pairing/Group/: Class.hs  Fq.hs  Fq12.hs  Fq2.hs  Fq6.hs  Point.hs
src/Plutarch/ZK/: Example.hs  Types.hs  Validation.hs
src/Plutus/: Pairing.hs  ZK.hs
src/Plutus/Pairing/: BN128.hs  Group.hs  MillerAlgorithm.hs
src/Plutus/Pairing/Group/: Fq.hs  Fq12.hs  Fq2.hs  Fq6.hs  Point.hs
src/Plutus/ZK/: Example.hs  Types.hs  Validation.hs
src/Service/: MerkleTree.hs
src/Service/MerkleTree/: Plutus.hs
zkp-circuit/: README.md  Withdraw.hs
zkp-circuit/Pairing/: Example.hs
zkp-circuit/ceremony2/: verification_key.json
zkp-circuit/proof/: proof.json  public.json  verifier.sol
zkp-circuit/withdraw/: merkleTree.circom  withdraw.circom
zkp-circuit/withdraw_js/: input.json
