cabal-version:      3.6
name:               tornadano
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             stanislav-az
maintainer:         st.zhdanovich@gmail.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

common common-configs
  default-language: Haskell2010

common common-deps
  build-depends: base

common common-lang
  default-extensions:
    NoStarIsType
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImplicitPrelude
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PatternGuards
    PolyKinds
    QualifiedDo
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

library
  import:          common-lang
  import:          common-configs
  import:          common-deps
  exposed-modules:
    Ext.Plutarch.Api.V2.Contexts
    Ext.Plutarch.Api.V2.Value
    Ext.Plutarch.Extra.Run
    Ext.Plutarch.List
    Ext.Plutarch.Num
    Ext.Plutarch.Rational
    Ext.PlutusTx.Builtins
    Ext.PlutusTx.List
    Ext.PlutusTx.Monad
    Ext.PlutusTx.Numeric
    Mixer.Datum
    Mixer.Datum.Plutus
    Mixer.Script
    Plutarch.Pairing.BN128
    Plutarch.Pairing.Group
    Plutarch.Pairing.Group.Fq
    Plutarch.Pairing.Group.Fq12
    Plutarch.Pairing.Group.Fq2
    Plutarch.Pairing.Group.Fq6
    Plutarch.Pairing.Group.Point
    Plutarch.Pairing.MillerAlgorithm
    Plutus.Pairing.BN128
    Plutus.Pairing.Group
    Plutus.Pairing.Group.Fq
    Plutus.Pairing.Group.Fq12
    Plutus.Pairing.Group.Fq2
    Plutus.Pairing.Group.Fq6
    Plutus.Pairing.Group.Point
    Plutus.Pairing.MillerAlgorithm

  hs-source-dirs:  src
  build-depends:
    , aeson
    , bytestring
    , data-default
    , lens
    , plutarch
    , plutarch-extra
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , text

-- Modules included in this library but not exported.
-- other-modules:

-- LANGUAGE extensions used by modules in this package.
-- other-extensions:

executable dump-script
  import:         common-lang
  import:         common-configs
  import:         common-deps
  main-is:        Main.hs
  other-modules:  Options
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , bytestring
    , optparse-applicative
    , plutarch
    , plutus-ledger-api
    , ply-plutarch
    , text
    , tornadano

-- LANGUAGE extensions used by modules in this package.
-- other-extensions:
